--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,13 +2,15 @@
 
 <ul>
     <% @articles.each do |article| %>
-        <li>
-            <%= article.title %>
+        <li>   
+            <%= link_to article.title, article %> 
         </li>
         <li>
             <%= article.body %>
         </li>
     <% end %>
 </ul>
+
+<%= link_to "New Article", new_article_path %>
 
 
