--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,17 @@
 <h1>Articles</h1>
 
+Our blog has <%= Article.public_count %> articles and counting!
+
 <ul>
     <% @articles.each do |article| %>
-        <li>   
-            <%= link_to article.title, article %> 
-        </li>
-        <li>
-            <%= article.body %>
-        </li>
+        <% unless article.archived? %>
+            <li>   
+                <%= link_to article.title, article %> 
+            </li>
+            <li>
+                <%= article.body %>
+            </li>
+        <% end %>
     <% end %>
 </ul>
 
